--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
       }
 
   }
-  var imgList = ['./images/pic1.png', './images/pic2.jpeg', './images/pic3.jpeg', './images/pic4.jpeg', './images/pic5.jpeg', './images/pic6.jpeg', './images/pic7.jpg', './images/pic8.jpg'];
+  var imgList = ['./images/pic1.png', './images/pic2.jpeg', './images/pic3.jpeg', './images/pic4.jpeg', './images/pic5.jpeg', './images/pic6.jpeg', './images/pic7.JPG', './images/pic8.jpg'];
   var imgDescList = ['第一次听你唱歌 :P','我在马六甲要上kl打疫苗前，一起看startup','这个也一样， 头发开始长了<br>!','你看我们在一起几可爱一下 XD','这时头发真的长了','刚刚找借口讲要吃宵夜其实要edit这个website！','你是我见过最可爱的学妹','好想你哦但是没办法muhydin哥不让我见你！我会慢慢等的'];
   var isInitImage = false; //循环图片列表之后改了true,取消onload事件;
   var imgIndex = 0;
