--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="address=no">
   <meta name="applicable-device" content="mobile">
-  <meta name="author" content="JackLu">
+  <meta name="author" content="JIA DA">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1,minimum-scale=1,user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="screen-orientation" content="portrait">
-  <meta name="description" content="一个记录我们在一起经过点点滴的idea">
+  <meta name="description" content="加达很酷">
   <meta name="theme-color" content="#f7d7da">
   <!-- 配置Open graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://jackluson.github.io/to-lover-demo/">
-  <meta property="og:description" content="一个记录“我们在一起走过点点滴滴”的idea">
-  <meta property="og:title" content="宝贝,感谢你一直的陪伴！">
+  <meta property="og:description" content="加达很酷">
+  <meta property="og:title" content="halo文希婷">
   <meta property="og:image" content="https://jackluson.github.io/to-lover-demo/pic-icon.png">
   <meta property="og:image:width" content="140">
   <meta property="og:image:height" content="109">
